; ModuleID = '/home/carl/AnghaBench/freebsd/stand/libsa/zfs/extr_zfs.c_zfs_dev_init.c'
source_filename = "/home/carl/AnghaBench/freebsd/stand/libsa/zfs/extr_zfs.c_zfs_dev_init.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 (...)* }

@archsw = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@ENXIO = common dso_local global i32 0, align 4
@zfs_pools = common dso_local global i32 0, align 4
@spa_link = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @zfs_dev_init to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @zfs_dev_init() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32*, align 8
  %3 = alloca i32*, align 8
  %4 = alloca i32*, align 8
  %5 = call i32 (...) @zfs_init()
  %6 = load i32 (...)*, i32 (...)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @archsw, i32 0, i32 0), align 8
  %7 = icmp eq i32 (...)* %6, null
  br i1 %7, label %8, label %10

8:                                                ; preds = %0
  %9 = load i32, i32* @ENXIO, align 4
  store i32 %9, i32* %1, align 4
  br label %40

10:                                               ; preds = %0
  %11 = load i32 (...)*, i32 (...)** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @archsw, i32 0, i32 0), align 8
  %12 = call i32 (...) %11()
  store i32* null, i32** %4, align 8
  %13 = call i32* @STAILQ_FIRST(i32* @zfs_pools)
  store i32* %13, i32** %2, align 8
  br label %14

14:                                               ; preds = %37, %10
  %15 = load i32*, i32** %2, align 8
  %16 = icmp ne i32* %15, null
  br i1 %16, label %17, label %39

17:                                               ; preds = %14
  %18 = load i32*, i32** %2, align 8
  %19 = load i32, i32* @spa_link, align 4
  %20 = call i32* @STAILQ_NEXT(i32* %18, i32 %19)
  store i32* %20, i32** %3, align 8
  %21 = load i32*, i32** %2, align 8
  %22 = call i64 @zfs_spa_init(i32* %21)
  %23 = icmp ne i64 %22, 0
  br i1 %23, label %24, label %35

24:                                               ; preds = %17
  %25 = load i32*, i32** %4, align 8
  %26 = icmp eq i32* %25, null
  br i1 %26, label %27, label %30

27:                                               ; preds = %24
  %28 = load i32, i32* @spa_link, align 4
  %29 = call i32 @STAILQ_REMOVE_HEAD(i32* @zfs_pools, i32 %28)
  br label %34

30:                                               ; preds = %24
  %31 = load i32*, i32** %4, align 8
  %32 = load i32, i32* @spa_link, align 4
  %33 = call i32 @STAILQ_REMOVE_AFTER(i32* @zfs_pools, i32* %31, i32 %32)
  br label %34

34:                                               ; preds = %30, %27
  br label %37

35:                                               ; preds = %17
  %36 = load i32*, i32** %2, align 8
  store i32* %36, i32** %4, align 8
  br label %37

37:                                               ; preds = %35, %34
  %38 = load i32*, i32** %3, align 8
  store i32* %38, i32** %2, align 8
  br label %14

39:                                               ; preds = %14
  store i32 0, i32* %1, align 4
  br label %40

40:                                               ; preds = %39, %8
  %41 = load i32, i32* %1, align 4
  ret i32 %41
}

declare dso_local i32 @zfs_init(...) #1

declare dso_local i32* @STAILQ_FIRST(i32*) #1

declare dso_local i32* @STAILQ_NEXT(i32*, i32) #1

declare dso_local i64 @zfs_spa_init(i32*) #1

declare dso_local i32 @STAILQ_REMOVE_HEAD(i32*, i32) #1

declare dso_local i32 @STAILQ_REMOVE_AFTER(i32*, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
